--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,113 @@
 * {
 	box-sizing: border-box;
 }
+
+html { 
+  background: url(img/fullscreenBg.png) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+/*typography*/
+@font-face {
+    font-family: 'abolition';
+    src: url(abolition.otf);
+}
+
+@font-face {
+    font-family: 'calibreSemibold';
+    src: url(calibre-regular.otf);
+}
+
+@font-face {
+    font-family: 'calibreRegular';
+    src: url(calibre-semibold.otf);
+}
+
+
+h2 {
+	font-family: adobe-text-pro, serif;
+	font-style: normal;
+	font-weight: 400;
+	font-size: 32px;
+	line-height: 38px;
+}
+
+h3 {
+	font-family: calibreSemibold, Helvetica, Arial, Sans-Serif;
+	font-size:18px;
+	margin:0 0 12px 0;
+}
+
+p {
+	font-family: calibreRegular,Helvetica, Arial, Sans-Serif;
+	font-size: 18px;
+	line-height:22px;
+	margin:0;
+}
+/*navigation*/
+
+ul {
+	list-style: none;
+}
+
+.main-nav{
+	font-family:abolition;
+	font-size: 32px;
+	letter-spacing: 1px	
+}
+
+.contact{
+	position:fixed;
+	top:30px;
+	left:30px;
+	/*background-color: #0033ff*/
+
+}
+
+.about{
+	position:fixed;
+	top:30px;
+	right:30px;
+	/*background-color: #0033ff*/
+
+}
+
+.instagram{
+	position:fixed;
+	bottom:30px;
+	left:30px;
+	/*background-color: #0033ff*/
+
+}
+
+.blog{
+	position:fixed;
+	bottom:30px;
+	right:30px;
+	/*background-color: #0033ff*/
+
+}
+
+a.logo img{
+	display: block;
+	margin: 36px auto 0 auto;
+}
+
+/*body positioning*/
+
+.innercontent{
+	padding: 135px 0;
+	/*max-width: 856px;*/
+	padding-right:20%;
+	padding-left:20%;
+	text-align:center;
+}
+
+.body1{
+	margin-bottom:60px;
+	padding-right:20%;
+	padding-left:20%;
+}
