--- a/css/style.css
+++ b/css/style.css
@@ -120,3 +120,14 @@ a.logo img{
 	padding-right:20%;
 	padding-left:20%;
 }
+
+.video-wrap .video iframe{
+	width:100%;
+	height:calc(100vw / 1.5625);
+	min-height:100%;
+	min-width:236.77%;
+	position:absolute;
+	top:50%;
+	left:50%;
+	transform:translate(-50%,-50%);
+}
