--- a/css/style.css
+++ b/css/style.css
@@ -2,28 +2,71 @@
 	box-sizing: border-box;
 }
 
-html { 
-  background: url(img/fullscreenBg.png) no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
+.aboutbg { 
+  background: url(../img/fullscreenBg.png) no-repeat center center fixed; 
   background-size: cover;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
+
+}
+
+.bgcolor {
+	color:#333333;
+}
+
+li.contact:hover::after {
+     width: 100px; 
+}
+
+li.contact::after {
+    content: "";
+    background-color: pink;
+    height: 10px;
+    width: 100px;
+    display: block;
+    transition-property: width;
+    transition-duration: 350ms;
+    transition-timing-function: ease-in-out;
+    transition-delay: 0ms;
+    position: relative;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+
+.videobg {
+	width: 200vw;
+    height: 200vh;
+    position: fixed;
+    top: -50vh;
+    left: -50vw;
+    z-index: -1;
+}
+
+.videobg iframe{
+	width:100%;
+	height:100%;
 }
 
 /*typography*/
 @font-face {
     font-family: 'abolition';
-    src: url(abolition.otf);
+    src: url(../fonts/abolition.otf);
 }
 
 @font-face {
     font-family: 'calibreSemibold';
-    src: url(calibre-regular.otf);
+    src: url(../fonts/calibre-regular.otf);
 }
 
 @font-face {
     font-family: 'calibreRegular';
-    src: url(calibre-semibold.otf);
+    src: url(../fonts/calibre-semibold.otf);
 }
 
 
@@ -57,7 +100,7 @@ ul {
 	font-family:abolition;
 	font-size: 40px;
 	letter-spacing: 2px;	
-	color:#4A4A4A;
+	color:#ffffff;
 }
 
 .contact{
@@ -94,13 +137,16 @@ ul {
 
 a{
 	text-decoration: none;
-	color: #000000;
+	color: #ffffff;
 }
 
-a.logo img{
-	display: block;
-	margin: 64px auto 0 auto;
-	/*position:fixed;*/
+a.logo{
+    line-height: 0;
+    display: inline-block;
+    position: relative;
+    top: 64px;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 
@@ -113,12 +159,14 @@ a.logo img{
 	padding-right:20%;
 	padding-left:20%;
 	text-align:center;
+	color:#ffffff;
 }
 
 .body1{
 	margin-bottom:60px;
 	padding-right:20%;
 	padding-left:20%;
+	color:#ffffff;
 }
 
 .video-wrap .video iframe{
