--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,5 +7,8 @@
 
 $base-url: "{{ site.url }}";
 
+$ease-out-quad: cubic-bezier(0.25, 0.46, 0.45, 0.94);
+$ease-out-expo: cubic-bezier(0.19, 1, 0.22, 1);
+
 @import "normalize";
 @import "style";
