--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,11 +3,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
-  <title>Pocono Digital House {% if page.title %}| {{ page.title }}{% endif %} </title>
+  <title>{{ site.title }} {% if page.title %}| {{ page.title }}{% endif %} </title>
   <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
   {% comment %}
     <!--
-      TODO: !!!
+      TODO: favicon
       <link rel="shortcut icon" href="/images/favicon.ico" />
     -->
   {% endcomment %}
