Header and Nav - position and style

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
-<header class="main-head">
-  <a class="logo" href="/" title="poconodigitalhouse">
-    <img alt="poconodigitalhouse" src="{{ '/assets/img/pdhlogo.svg' | relative_url }}"/>
+<header class="header">
+  <a class="header__logo" href="/" title="Home">
+    Pocono Digital House
   </a>
 </header>
