--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,15 +1,26 @@
-<nav class="main-nav" role="navigation">
-  <ul>
-    <li class="contact {% if page.url contains 'contact' %}current{% endif %}">
-      <a href="/contact">contact</a>
-    </li>
-    <li class="about {% if page.url contains 'about' %}current{% endif %}">
-      <a href="/about">about</a>
-    </li>
-    <li class="instagram">
-      <a href="https://www.instagram.com/pocono_digital/" target="_blank">instagram</a>
-    </li>
-    <li class="blog">
-    <a href="https://www.instagram.com/pocono_digital/" target="_blank">blog</a>
-  </ul>
+<nav class="nav" role="navigation">
+  <a
+    class="nav__item nav__item--contact {% if page.url contains 'contact' %}nav__item--current{% endif %}"
+    href="/contact"
+  >
+    <span>contact</span>
+  </a>
+  <a
+    class="nav__item nav__item--about {% if page.url contains 'about' %}nav__item--current{% endif %}"
+    href="/about"
+  >
+    <span>about</span>
+  </a>
+  <a
+    class="nav__item nav__item--instagram"
+    href="https://www.instagram.com/pocono_digital/" target="_blank"
+  >
+    <span>instagram</span>
+  </a>
+  <a
+    class="nav__item nav__item--blog"
+    href="https://www.instagram.com/pocono_digital/" target="_blank"
+  >
+    <span>blog</span>
+  </a>
 </nav>
