moves the logo into the nav

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,7 @@
 <nav class="nav" role="navigation">
+  <a class="nav__item nav__item--home" href="/" title="Home">
+    <span>Pocono Digital House</span>
+  </a>
   <a
     class="nav__item nav__item--contact {% if page.url contains 'contact' %}nav__item--current{% endif %}"
     href="/contact"
