--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,8 +10,13 @@ $base-url: "{{ site.url }}";
 $ease-out-quad: cubic-bezier(0.25, 0.46, 0.45, 0.94);
 $ease-out-expo: cubic-bezier(0.19, 1, 0.22, 1);
 
+$font-abolition: 'abolition';
+$font-calibre: 'calibre';
+
 $color-brand: #dcae6d;
-$color-white: #efefef;
+$color-text-light: #efefef;
+$color-text-dark: #133b60;
+$color-background: #f9f9e2;
 
 $spacing-tiny: 4px;
 $spacing-small: 8px;
