adds nav themes

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
-<nav class="nav" role="navigation">
+<nav class="nav nav--theme-{{ page.nav_theme }}" role="navigation">
   <a class="nav__item nav__item--home" href="/" title="Home">
     <span>Pocono Digital House</span>
   </a>
