--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -209,13 +209,22 @@ body {
     text-transform: uppercase;
     letter-spacing: 0.6px;
 
+    &--theme-light &__item {
+        color: $color-text-light;
+        font-weight: normal;
+    }
+
+    &--theme-dark &__item {
+        color: $color-text-dark;
+        font-weight: bold;
+    }
+
     &__item {
         position: fixed;
         display: flex;
         justify-content: center;
         align-items: center;
         height: $spacing-huge;
-        color: $color-white;
         text-decoration: none;
 
         &--home {
@@ -268,11 +277,6 @@ body {
     }
 }
 
-// ----
-a {
-    text-decoration: none;
-    color: #ffffff;
-}
 
 
 
