fixed home comments

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,9 @@
   <body>
 
     {% if page.type == 'home' %}
-      <!-- DATA-BG-VIDEO-ID = id of the background video -->
+      {% comment %}
+        --> DATA-BG-VIDEO-ID = id of the background video
+      {% endcomment %}
       <div class="bg-video" data-js="bg-video" data-bg-video-id="261644461">
         <div class="bg-video__sizing" data-bg-video-player-target></div>
       </div>
