adds modal close placeholder

--- a/_includes/demo-modal.html
+++ b/_includes/demo-modal.html
@@ -2,8 +2,7 @@
   <div class="modal__upper-bound" data-modal="node-to-measure">
     <div class="modal__container" data-modal="node-to-resize">
       <button class="modal__close-btn" data-modal="close-btn" type="button">
-        <!-- TODO: replace this with the "x" svg -->
-        close
+        {% include svg-x.html %}
       </button>
       <div class="modal__video-wrapper" data-demo-video-target></div>
     </div>
