--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -21,26 +21,19 @@
     box-sizing: border-box;
 }
 
-body {
-    font-size: 16px;
-    //----
-    background-color: #F9F9E2;
+article, section, aside, div,
+h1, h2, h3, h4, h5, h6,
+p, blockquote, a, span {
+    -webkit-font-smoothing: antialiased;
 }
 
-
-
-.aboutbg {
-    // background-image is set in each page's Front Matter
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-attachment: fixed;
-    background-size: cover;
-    width: 100vw;
-    height: 100vh;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: -1;
+body {
+    background-color: $color-background;
+    font-family: $font-calibre, arial, sans;
+    font-size: 18px;
+    line-height: 1.22;
+    letter-spacing: 0.3px;
+    color: $color-text-dark;
 }
 
 .bgcolor {
@@ -94,12 +87,6 @@ body {
     }
 }
 
-.demo-button {
-    position: absolute;
-    top: 50vh;
-    left: 50vw;
-    transform: translate(-50%, -50%);
-}
 
 .modal {
     display: none;
@@ -278,9 +265,20 @@ body {
 }
 
 
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
+    a {
+        color: $color-text-dark;
+    }
 
 /*typography*/
+    h3 {
+        font-size: inherit;
+        line-height: inherit;
+    }
 
 h2 {
     font-family: adobe-text-pro, serif;
@@ -289,6 +287,9 @@ h2 {
     font-size: 32px;
     line-height: 38px;
     -webkit-font-smoothing: antialiased
+    h2, h3, p {
+        margin: $spacing-small 0;
+    }
 }
 
 h3 {
